--- a/config/config.json
+++ b/config/config.json
@@ -17,10 +17,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "starwars",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "CLEARDB_DATABASE_URL",
+    "dialect": "mysql",
+    "define": {
+      "freezeTableNames": true
+    }
   }
 }
