--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "uni_project_template",
   "version": "1.0.0",
   "description": "uni_project template",
-  "main": "app.ts",
+  "main": "build/server.js",
   "scripts": {
+    "tsc": "tsc",
+    "postinstall": "yarn tsc",
+    "build": "node build/app.js",
+    "start": "node build/app.js",
     "test": "nyc --reporter=html   mocha -r ts-node/register  './test/**/*.ts'",
     "dev": "nodemon  -r dotenv/config app.ts",
-    "build": "ts-node app.ts",
     "migrate": "sequelize-cli db:migrate",
     "undo-migrate": "sequelize-cli db:migrate:undo",
     "seed-generate": "sequelize-cli seed:generate",
