--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/app.js",
   "scripts": {
     "tsc": "tsc",
-    "postinstall": "yarn tsc",
-    "start": "node build/app.js",
+    "start": "ts-node app.ts",
     "test": "nyc --reporter=html   mocha -r ts-node/register  './test/**/*.ts'",
     "dev": "nodemon  -r dotenv/config app.ts",
     "migrate": "sequelize-cli db:migrate",
