--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "morgan": "^1.10.0",
+    "ts-node": "^10.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
