--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/joi": "^17.2.3",
     "@types/mocha": "^9.0.0",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.7.13",
+    "@types/node-cron": "^3.0.0",
     "@types/proxyquire": "^1.3.28",
     "@types/sequelize": "^4.28.10",
     "@types/sinon": "^10.0.2",
@@ -55,8 +57,7 @@
     "sequelize-cli": "^6.2.0",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.2",
-    "@types/helmet": "^4.0.0"
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -66,11 +67,12 @@
     "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "morgan": "^1.10.0",
-    "ts-node": "^10.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "node-cron": "^3.0.0",
     "sequelize": "^6.6.5",
     "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
     "winston": "^3.3.3"
   }
 }
