--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "start": "ts-node app.ts",
+    "build": "ts-node app.ts",
     "test": "nyc --reporter=html   mocha -r ts-node/register  './test/**/*.ts'",
     "dev": "nodemon  -r dotenv/config app.ts",
     "migrate": "sequelize-cli db:migrate",
